# Smart-Charging-Station-System

./: .gitignore  README.md
.cursor/: todo.md  需求文档.md
.cursor/rules/: project-structure.mdc
backend/: create_db.py  main.py  pyproject.toml
backend/app/: auth.py  crud.py  database.py  models.py  queue_manager.py  schemas.py
backend/app/routers/: admin.py  admin_auth.py  admin_resources.py  auth.py  history.py  orders.py  requests.py
backend/app/services/: billing_service.py  charging_monitor_service.py  config_service.py  fault_service.py  pile_simulator_service.py  scheduling_service.py
backend/sql/: schema.sql
frontend/: .gitignore  nuxt.config.ts  package-lock.json  package.json
frontend/assets/styles/: global.css
frontend/components/: AdminAuthBar.vue  AuthBar.vue  ChargingDashboard.vue
frontend/composables/: useAdminAuth.ts  useAdminOrders.ts  useAdminPile.ts  useAdminRequests.ts  useAdminUsers.ts  useAuth.ts  useHistory.ts  usePile.ts  useRequest.ts
frontend/layouts/: admin.vue  default.vue
frontend/pages/: admin-dashboard.vue  admin-login.vue  admin-orders.vue  admin-piles.vue  admin-requests.vue  admin-users.vue  admin-visualization.vue  index.vue  login.vue  register.vue  visualization.vue
frontend/pages/history/: [id].vue  index.vue
frontend/plugins/: auth.ts  theme.client.ts
